--- a/NODEJS-MONGODB/package.json
+++ b/NODEJS-MONGODB/package.json
@@ -12,6 +12,11 @@
   "author": "Daniela Morales",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "chalk": "^4.1.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongodb": "^3.6.6",
+    "mongoose": "^5.12.3",
+    "uniqid": "^5.3.0"
   }
 }
