--- a/NODEJS-MONGODB/package.json
+++ b/NODEJS-MONGODB/package.json
@@ -15,6 +15,7 @@
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.3",
     "uniqid": "^5.3.0"
