--- a/NODEJS-MONGODB/package.json
+++ b/NODEJS-MONGODB/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.3",
+    "multer": "^1.4.2",
     "uniqid": "^5.3.0"
   }
 }
