--- a/NODEJS-MONGODB/package.json
+++ b/NODEJS-MONGODB/package.json
@@ -19,6 +19,9 @@
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
+    "nanoid": "^3.1.22",
+    "path": "^0.12.7",
+    "socket.io": "^4.0.1",
     "uniqid": "^5.3.0"
   }
 }
